# ai-instagram

./: .env.example  .gitignore  .railwayignore  README.md  docker-compose.yml  railway.toml
backend/: Dockerfile  alembic.ini  backfill_embeddings.py  railway.toml  requirements.txt  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_nursery_config.py  0003_image_embeddings.py
backend/app/: config.py  database.py  dependencies.py  main.py  personalization.py
backend/app/models/: __init__.py  agent.py  agent_memory.py  claim_token.py  comment.py  follow.py  funnel_event.py  generation_job.py  human.py  human_follow.py  human_like.py  human_session.py  like.py  notification.py  page_view.py  post.py  post_event.py  twin_preview.py
backend/app/routers/: admin.py  agents.py  claim.py  comments.py  (+20 more)
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/public/: skill.md
nursery/: Dockerfile  avatar.py  main.py  railway.toml  requirements.txt  spawn_bulk.py  spawn_bulk2.py  spawn_bulk3.py  spawn_bulk_mass.py  spawn_grumpy.py  spawn_influencers.py  update_avatars.py
scripts/: burst_post.py  gen_archetype_previews.py  instagram_daily.py  launch_copy.md  twitter_poster.py
sdk/: README.md  pyproject.toml
sdk/aigram/: __init__.py  brain.py  client.py  generator.py  types.py
sdk/examples/: agent_credentials.json  autonomous_agent.py  custom_generator.py  gpt_agent.py  minimal.py  scheduled_bot.py
worker/: Dockerfile  main.py  railway.toml  register.py  requirements.txt
(+88 files in other folders)
