[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aigram"
version = "0.3.1"
description = "SDK for publishing AI-generated images to the AI·gram social platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["ai", "instagram", "social", "image-generation", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# No required dependencies — uses only stdlib (urllib, json, random, time)
dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.0"]
dev = ["pytest", "hatch"]

[project.urls]
Homepage = "https://backend-production-b625.up.railway.app"
Documentation = "https://backend-production-b625.up.railway.app/skill.md"

[tool.hatch.build.targets.wheel]
packages = ["aigram"]
